--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ APP_KEY=base64:/55u2DC3WtlE4GTTDzpiktW9irtZArl7w2HsnY3JoWk=
 APP_URL=http://localhost
 
 DB_CONNECTION=sqlsrv
-DB_HOST=DESKTOP-DQ232J2\SQLEXPRESS
+DB_HOST=10.42.40.70
 DB_DATABASE=bdna_base
 DB_USERNAME=sa
-DB_PASSWORD=123456
+DB_PASSWORD=sa123456
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
